<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iTunes Client</string>
    <string name="action_settings">Settings</string>
    <string name="Change_language">Change Language</string>
    <string name="language_English">English</string>
    <string name="language_Spanish">Español (Spanish)</string>
    <string name="language_Persian">پارسی (Persian)</string>
    <string name="userNameLabel">Username :</string>
    <string name="passwordLabel">Password :</string>
    <string name="LoginButtonLabel">Login</string>
    <string name="RegisterButtonLabel">Register</string>
    <string name="FirstName">First Name :</string>
    <string name="LastName">Last Name :</string>
    <string name="Email">Email :</string>
    <string name="passwordConfirmation">Confirm Password :</string>
    <string name="Mobile">Mobile :</string>
    <string name="title_activity_register">Register</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">Home</string>
    <string name="auto_update_description">Automatically update the list from web on application start</string>
    <string name="auto_update">Auto Update</string>
    <string name="service_BaseURL_Description">The address of the server</string>
    <string name="service_BaseURL_Title">Server URL</string>
    <string name="updateListTitle">Update list</string>
    <string name="title_activity_apps_list">Apps List</string>
    <string name="category_icon">Category Icon</string>
    <string name="Select_Group_Title">Categories</string>
    <string name="title_activity_app_details">App Details</string>
    <string name="buy_button_title">Buy now!</string>
    <string name="install_button_title">Install!</string>
    <string name="FreeCostTitle">Free</string>
    <string name="downloadAppTitle">Download App</string>
    <string name="appInfoTitle">App Info</string>
    <string name="SimilarApps">Similar apps</string>
    <string name="MoreAppsInCategory">More</string>
    <string name="ProducerInfo">Developer</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_login">Login</string>
    <string name="downloadingDialogTitle">Downloading apps list from iTunes!</string>
    <string name="downloadProgress_CurrentOperation">Current operation :</string>
    <string name="title_activity_loading_fragment">Update form</string>
    <string name="update_finished_successfuly">Update finished successfully!</string>
    <string name="only_wifi_net_allowed_title">Internet access</string>
    <string name="only_wifi_net_allowed_description">Only WiFi internet is allowed to do this operation!</string>
    <string name="download_only_on_wifi_tite">Download only on WiFi</string>
    <string name="download_only_on_wifi_description">Allows you to update the list of apps, just if you are connected to a WiFi network</string>
    <string name="change_settings">Change settings</string>
    <string name="current_item_icon_title">current item icon</string>
    <string name="cancel_update_button_text">Cancel update</string>
    <string name="preparing_to_update_message">Preparing to update....</string>
    <string name="download_dialog_title">Updating apps list</string>
    <string name="net_settings_title">Network settings</string>
    <string name="user_settings_title">User settings</string>
    <string name="update_aborted_message">Update process has been aborted by user</string>
    <string name="no_connection_error_description">There is no connection to the internet</string>
    <string name="no_connection_error_title">No Connection</string>
    <string name="app_list_drawer_title">Select a category</string>
    <string name="action_search">Search</string>
    <string name="action_search_query">Enter the app name</string>
    <string name="title_activity_search">Search</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Write a keyword...</string>
    <string name="search_result_window_title">Search result</string>
    <string name="result_description">%1$s apps were found containing the word \'%2$s\'</string>
    <string name="update_mechanism_summary">Select the type of the apps you want to download from the server</string>
    <string name="update_mechanism_title">Update mechanism</string>
    <string name="update_mechanism_settings">Update settings</string>
    <string name="update_apps_count_summary">Number of applications to download</string>
    <string name="update_apps_count_title">Apps count</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="developer_apps_title">More from this developer</string>
    <string name="apps_by_developer_window_title">Apps from %1$s</string>
    <string name="visit_producer_website">Visit website</string>
    <string name="saving_processed_data">Downloading images</string>

    <string name="aborted_by_user">Aborted by user</string>
    <string name="download_started">Downloading data started!</string>
    <string name="data_downloaded">Data has been downloaded</string>
    <string name="parsing_item">Parsing </string>
    <string name="downloading_item_image">Downloading %1$s images [%2$s]</string>
    <string name="adding_item_category">Adding %1$s category</string>
    <string name="ok">OK</string>
    <string name="cancel_update_button">Cancel update</string>
</resources>