<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registerLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/pageToolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp" >

            <TextView
                android:id="@+id/firstNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/FirstName"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/firstNameEditText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/lastNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/LastName"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" >
            </EditText>

            <TextView
                android:id="@+id/UsernameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/userNameLabel"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/UsernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" >
            </EditText>

            <TextView
                android:id="@+id/PasswordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passwordLabel"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" >
            </EditText>

            <TextView
                android:id="@+id/PasswordConfirmationTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passwordConfirmation"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/passwordConfirmationEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" >
            </EditText>

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Email"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" >
            </EditText>

            <TextView
                android:id="@+id/MobileTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Mobile"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/MobileEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" >
            </EditText>

            <Button
                android:id="@+id/RegisterButton"
                style="android:buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="30dp"
                android:onClick="RegisterButton_Click"
                android:text="@string/RegisterButtonLabel" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>