<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LoginLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ir.royapajoohesh.itunesclient.LoginActivity" >

    <include
        android:id="@+id/pageToolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <ImageView
                android:id="@+id/loginImageView"
                android:layout_width="match_parent"
                android:layout_height="246dp"
                android:layout_gravity="top"
                android:layout_weight="0.14"
                android:scaleType="fitCenter"
                android:src="@mipmap/icon" />

            <TextView
                android:id="@+id/firstNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#333333" />

            <TextView
                android:id="@+id/CategoryTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/userNameLabel"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/UsernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passwordLabel"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" >
            </EditText>

            <Button
                android:id="@+id/LoginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="LoginButton_Click"
                android:text="@string/LoginButtonLabel" />

            <Button
                android:id="@+id/RegisterButton"
                style="android:buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RegisterButtonLabel" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>