<LinearLayout
    android:id="@+id/linearLayout1"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ir.royapajoohesh.itunesclient.AppDetailsActivity">

    <include
        android:id="@+id/pageToolbar"
        layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <RelativeLayout
                android:id="@+id/headerSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/groupbox_style">

                <ImageView
                    android:id="@+id/appIconImageView"
                    android:layout_width="97dp"
                    android:layout_height="97dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/frame_style"
                    android:contentDescription="App Icon"
                    android:src="@mipmap/icon"/>

                <TextView
                    android:id="@+id/AppTitleTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="3dp"
                    android:layout_toEndOf="@+id/appIconImageView"
                    android:layout_toRightOf="@+id/appIconImageView"
                    android:text="App Title"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <TextView
                    android:id="@+id/AppProducerTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/AppTitleTextView"
                    android:layout_marginBottom="2dp"
                    android:layout_toEndOf="@+id/appIconImageView"
                    android:layout_toRightOf="@+id/appIconImageView"
                    android:drawableLeft="@mipmap/factory_16"
                    android:drawablePadding="3dp"
                    android:text="Producer"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <TextView
                    android:id="@+id/categoryNameTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/AppProducerTextView"
                    android:layout_toEndOf="@+id/appIconImageView"
                    android:layout_toLeftOf="@+id/buyButton"
                    android:layout_toRightOf="@+id/appIconImageView"
                    android:drawableLeft="@mipmap/tag_icon_16_right"
                    android:drawablePadding="3dp"
                    android:text="Category"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <Button
                    android:id="@+id/buyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right|end"
                    android:background="@drawable/button_style"
                    android:text="@string/buy_button_title"
                    android:textColor="@color/buttonTextColor"
                    android:layout_below="@+id/categoryNameTextView"
                    android:layout_marginTop="5dp"/>

            </RelativeLayout>

            <!-- Summary -->
            <TextView
                android:id="@+id/AppSummeryTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/groupbox_style"
                android:text="Some Descriptions"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <!-- Similar Apps -->
            <LinearLayout
                android:id="@+id/moreSimilarAppsTitleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/SimilarApps"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <Button
                    android:id="@+id/moreSimilarAppsButton"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:background="@drawable/button_style"
                    android:text="@string/MoreAppsInCategory"
                    android:textColor="@color/buttonTextColor"/>

            </LinearLayout>

            <HorizontalScrollView
                android:id="@+id/moreSimilarAppsListLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/similarAppsLinearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:scrollbars="none">
                </LinearLayout>
            </HorizontalScrollView>


            <!-- More Developer Apps -->
            <LinearLayout
                android:id="@+id/moreDeveloperAppsTitleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/moreDeveloperAppsTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/developer_apps_title"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <Button
                    android:id="@+id/moreDeveloperAppsButton"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:background="@drawable/button_style"
                    android:text="@string/MoreAppsInCategory"
                    android:textColor="@color/buttonTextColor"/>

            </LinearLayout>

            <HorizontalScrollView
                android:id="@+id/moreDeveloperAppsListLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/developerAppsLinearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:scrollbars="none">
                </LinearLayout>
            </HorizontalScrollView>


            <!-- Developer Info -->
            <TextView
                android:id="@+id/producerInfoTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="30dp"
                android:text="@string/ProducerInfo"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <LinearLayout
                android:id="@+id/producerInfoItemsLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:scrollbars="none">

                <TextView
                    android:id="@+id/producerNameTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:drawableLeft="@mipmap/factory_26"
                    android:drawablePadding="6dp"
                    android:drawableStart="@mipmap/factory_26"
                    android:text="Company Title"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <TextView
                    android:id="@+id/producerWebsiteTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:drawablePadding="6dp"
                    android:drawableLeft="@mipmap/globe_icon_26"
                    android:drawableStart="@mipmap/globe_icon_26"
                    android:text="@string/visit_producer_website"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>